Changes in Version 1-00.04
  o Corrected NAMESPACE
Changes in Version 1-00.03
  o added psd package for another spectral density estimator
  o added prewhitening otion for spectral density estimator 
Changes in Version 1-00.02
  o fixed bug in Roxygen documentation
Changes in Version 1-00.01
  o first version released