@@ -1,7 +1,7 @@
 Package: nse
 Type: Package
 Title: Numerical Standard Error Estimators
-Version: 1-00.04
+Version: 1-00.05
 Date: 2016-01-29
 Author: Keven Bluteau, David Ardia
 Maintainer: Keven Bluteau <keven.bluteau@unine.ch>, David Ardia
@@ -9,14 +9,7 @@ Maintainer: Keven Bluteau <keven.bluteau@unine.ch>, David Ardia
 Description: Offer mutliple ways to calculate numerical standard error (NSE) of
     univariate (or multivariate in some cases) time series.
 License: GPL (>= 2)
-Imports:
-    Rcpp (>= 0.12.0),
-    coda,
-    mcmc,
-    np,
-    sandwich,
-    sapa,
-    psd
+Imports: Rcpp (>= 0.12.0), coda, mcmc, np, sandwich, sapa, psd, mcmcse
 LinkingTo: Rcpp
 NeedsCompilation: yes
 RoxygenNote: 5.0.1
