@@ -9,8 +9,9 @@ export(nse.spec0)
 import(coda)
 import(mcmc)
 import(np)
-import(psd)
 import(sandwich)
 import(sapa)
+import(psd)
+import(mcmcse)
 importFrom(Rcpp,evalCpp)
 useDynLib(nse)
